Bug fix: the innate power title background  was too big

--- a/_global/css/board_front/innate-power.css
+++ b/_global/css/board_front/innate-power.css
@@ -56,7 +56,7 @@ info-container {
 
 info-title {
   height: 20px;
-  width: 463.25px;
+  width: 100%;
   display: flex;
   align-items: center;
   color: white;
